ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/StrictMode/parserStrictMode15/input.ts.stderr
error: 'delete' cannot be called on an identifier in strict mode
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/StrictMode/parserStrictMode15/input.ts:2:8
  |
2 | delete a;
  |        ^

error: The operand of a delete operator must be a property reference.
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/StrictMode/parserStrictMode15/input.ts:2:8
  |
2 | delete a;
  |        ^

